--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
