--- a/backend/PNG-Downloading-Platform/src/main/resources/application.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application.yml
@@ -14,3 +14,5 @@ logging:
   pattern:
     console: ${LOG_PATTERN_CONSOLE:%green(%d{dd-MMM-yyyy HH:mm:ss.SSS}) %blue(%-5level) %red([ %thread ]) %yellow(%logger{ 15 }) - %msg%n}}
 
+base:
+  url: /api/v1
