--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "next": "14.2.14",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
