--- a/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
@@ -24,3 +24,8 @@ spring:
   flyway:
     baseline-on-migrate: true
     enabled: true
+
+--- ###Custom Variables
+token:
+  jwt:
+    expires_in: 60
