--- a/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
@@ -25,6 +25,17 @@ spring:
     baseline-on-migrate: true
     enabled: true
 
+--- ###File
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+file:
+  storage:
+    location: "src/main/resources/uploads"
+
 --- ###Custom Variables
 token:
   jwt:
