--- a/backend/PNG-Downloading-Platform/compose.yaml
+++ b/backend/PNG-Downloading-Platform/compose.yaml
@@ -9,7 +9,7 @@
 # https://github.com/docker/awesome-compose
 services:
   server:
-    container_name: imalchemy:0.1
+    container_name: imalchemy
     build:
       context: .
       dockerfile: /Dockerfile
