(bk) hotfix: errors for running app with docker with prod profile.
1. `FileService` couldn't initialize the file location.
2. Docker image couldn't build. The error occurs because the `.mvn` directory is missing in the project directory.
    > Solution: run `mvn wrapper:wrapper`

--- a/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
@@ -32,9 +32,9 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
 
-file:
-  storage:
-    location: "src/main/resources/uploads"
+#file:
+#  storage:
+#    location: "src/main/resources/uploads"
 
 --- #Swagger
 #springdoc:
