--- a/backend/PNG-Downloading-Platform/compose.yaml
+++ b/backend/PNG-Downloading-Platform/compose.yaml
@@ -11,7 +11,8 @@ services:
   server:
     build:
       context: .
-      dockerfile: /Dockerfile
+      dockerfile: ./Dockerfile
+    container_name: backend_server
     ports:
       - 8080:8080
     environment:
@@ -21,6 +22,10 @@ services:
       - DATABASE_NAME=imalchemy
       - DATABASE_USERNAME=user
       - DATABASE_PASSWORD_FILE=/run/secrets/db-password
+      - FILE_UPLOAD_LOCATION=/app/uploads
+    volumes:
+      - file-uploads:/app/uploads  # Use a named volume for persistent file storage
+      - ./data/db/password.txt:/run/secrets/db-password
     depends_on:
       db:
         condition: service_healthy
@@ -33,12 +38,9 @@ services:
   # database data between container restarts. The `db-password` secret is used
   # to set the database password. You must create `db/password.txt` and add
   # a password of your choosing to it before running `docker-compose up`.
-  #     depends_on:
-  #       db:
-  #         condition: service_healthy
   db:
     image: postgres:17-alpine
-    container_name: png-downloading-platform
+    container_name: database
     restart: on-failure
     environment:
       - POSTGRES_DB=imalchemy
@@ -55,6 +57,11 @@ services:
       retries: 5
     volumes:
       - ./data/db/postgres:/var/lib/postgresql/data
+
+# Define the named volume for file uploads
+volumes:
+  file-uploads:
+    driver: local
 
 secrets:
   db-password:
