--- a/backend/PNG-Downloading-Platform/src/main/resources/application-prod.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application-prod.yml
@@ -14,9 +14,6 @@ spring:
 
   # hibernate
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: validate
 
@@ -24,6 +21,17 @@ spring:
   flyway:
     baseline-on-migrate: true
     enabled: true
+
+--- ###File
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+file:
+  storage:
+    location: ${FILE_UPLOAD_LOCATION:/app/uploads}
 
 --- ###Custom Variables
 token:
