--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "js-cookie": "^3.0.5",
-    "next": "14.2.14",
+    "next": "^14.2.14",
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
