--- a/backend/PNG-Downloading-Platform/pom.xml
+++ b/backend/PNG-Downloading-Platform/pom.xml
@@ -107,6 +107,11 @@
 <!--            <optional>true</optional>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
