(bk) hotfix: project name and version fix.

--- a/backend/PNG-Downloading-Platform/compose.yaml
+++ b/backend/PNG-Downloading-Platform/compose.yaml
@@ -13,6 +13,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     container_name: backend_server
+    image: dukeofjava/imalchemy:0.1-BETA
     ports:
       - 8080:8080
     environment:
