--- a/backend/PNG-Downloading-Platform/pom.xml
+++ b/backend/PNG-Downloading-Platform/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.imalchemy</groupId>
     <artifactId>PNG-Downloading-Platform</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1-BETA</version>
 
     <name>PNG-Downloading-Platform</name>
     <description>PNG-Downloading-Platform</description>
@@ -100,12 +100,12 @@
         </dependency>
 
         <!-- Tools -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-docker-compose</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-docker-compose</artifactId>-->
+        <!--            <scope>runtime</scope>-->
+        <!--            <optional>true</optional>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -142,6 +142,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <image>
+                        <name>dukeofjava/${project.artifactId}:${project.version}</name>
+                    </image>
                 </configuration>
             </plugin>
 
