--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.10",
     "react": "^18",
