--- a/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application-dev.yml
@@ -32,6 +32,10 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
 
+file:
+  storage:
+    location: ${FILE_UPLOAD_LOCATION:C:\Users\Al-Khalsi\Desktop\WebSite\freeng\public\img}
+
 --- #Swagger
 #springdoc:
 #  api-docs:
