(bck): feat: Implement FTP file storage strategy for upload and download (ParsPack) - (WIP)
- Added implementation for storing files on FTP server in `ParsPackDownloadHostFileStorageStrategy` (WIP)
- Implemented load method for retrieving files from FTP server using temporary file creation (WIP)

--- a/backend/PNG-Downloading-Platform/pom.xml
+++ b/backend/PNG-Downloading-Platform/pom.xml
@@ -43,6 +43,7 @@
     <properties>
         <java.version>17</java.version>
         <jwt.version>0.12.5</jwt.version>
+        <ftp.version>3.11.0</ftp.version>
     </properties>
 
     <dependencies>
@@ -54,6 +55,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- File handling (FTP Protocol) -->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>${ftp.version}</version>
         </dependency>
 
         <!-- JWT -->
