--- a/backend/PNG-Downloading-Platform/src/main/resources/application-prod.yml
+++ b/backend/PNG-Downloading-Platform/src/main/resources/application-prod.yml
@@ -1,3 +1,7 @@
+logging:
+  pattern:
+    console: ${LOG_PATTERN_CONSOLE:%green(%d{dd-MMM-yyyy HH:mm:ss.SSS}) %blue(%-5level) %red([ %thread ]) %yellow(%logger{ 15 }) - %msg%n}}
+
 --- ###Profile
 spring:
   config:
