--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "tailwind-scrollbar": "^3.1.0",
-    "three": "^0.170.0"
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "json-server": "^1.0.0-beta.3",
