--- a/backend/pixelfreebies-service/src/main/resources/application-dev.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application-dev.yml
@@ -36,7 +36,8 @@ spring:
 
 file:
   storage:
-    location: ${FILE_UPLOAD_LOCATION:C:\Users\Al-Khalsi\Desktop\WebSite\pixelfreebies-client\public\img}
+#    location: ${FILE_UPLOAD_LOCATION:C:\Users\Al-Khalsi\Desktop\WebSite\pixelfreebies-client\public\img}
+    location: ${FILE_UPLOAD_LOCATION:/home/simi/uploads}
 ftp:
   host: 2193182589.cloudydl.com
   username: pz20122
