(bck): hotfix: production - upload to parspack

--- a/backend/pixelfreebies-service/src/main/resources/application-prod.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application-prod.yml
@@ -50,4 +50,4 @@ ftp:
 --- ###Custom Variables
 token:
   jwt:
-    expires_in: 1440 # 60min * 24hours = 1440min
+    expires_in: 1440 # Token expiration time in minutes (1440 minutes = 24 hours)
