--- a/backend/pixelfreebies-service/src/main/resources/application-prod.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application-prod.yml
@@ -47,6 +47,12 @@ ftp:
   username: ${FTP_USERNAME}
   password: ${FTP_PASSWORD}
 
+s3:
+  bucket: c567062
+  endpointUrl: ${S3_ENDPOINT_URL:c567062.parspack.net}
+  accessKey: ${S3_ACCESS_KEY:ZGxnMRgbfHdakpAE}
+  secretKey: ${S3_SECRET_KEY:mC8Se7MaRnSkHAhzydzELb3sWsbCBCpY}
+
 --- ###Custom Variables
 token:
   jwt:
