(bck): hotfix: cors origin to list

--- a/backend/pixelfreebies-service/src/main/resources/application.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application.yml
@@ -17,4 +17,4 @@ base:
 cors:
   origin:
     url:
-      permitted: ${CORS_ORIGIN_URL:http://localhost:3000}
+      permitted: ${CORS_ORIGIN_URL:http://localhost:3000} # comma-separated
