--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Cleanup old Docker tags
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          TAGS=$(curl -s "https://hub.docker.com/v2/repositories/${IMAGE_NAME}/tags/" | jq -r '.results[].name' | grep 'dev-')
+          TAGS=$(curl -s "https://hub.docker.com/repository/docker/dukeofjava/pixelfreebies-service/tags" | jq -r '.results[].name' | grep 'dev-')
           TAGS_TO_DELETE=$(echo "$TAGS" | sort -r | tail -n +4)
           for TAG in $TAGS_TO_DELETE; do
             echo "Deleting tag: ${TAG}"
