--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -91,21 +91,19 @@ jobs:
           echo "Pushing Docker image: $TAG"
           docker push $TAG
 
-      # Install Required Dependencies
-      - name: Install jq and curl
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq curl
+      # Install Go
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
 
-      # Clean up old Docker tags
+      # Build and run the cleanup script
       - name: Cleanup old Docker tags
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          TAGS=$(curl -s "https://hub.docker.com/repository/docker/dukeofjava/pixelfreebies-service/tags" | jq -r '.results[].name' | grep 'dev-')
-          TAGS_TO_DELETE=$(echo "$TAGS" | sort -r | tail -n +4)
-          for TAG in $TAGS_TO_DELETE; do
-            echo "Deleting tag: ${TAG}"
-            curl -s -X DELETE \
-              -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
-              "https://hub.docker.com/v2/repositories/${IMAGE_NAME}/tags/${TAG}/"
-          done
+          cd .github/workflows/scripts/cleanup
+          go build -o cleanup cleanup.go
+          ./cleanup
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
