--- a/.github/workflows/nextjs-docker-build.yml
+++ b/.github/workflows/nextjs-docker-build.yml
@@ -22,19 +22,23 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Install Docker BuildKit
+      # Enable Docker BuildKit
       - name: Enable Docker BuildKit
         run: |
           echo '{ "experimental": true, "features": { "buildkit": true } }' | sudo tee /etc/docker/daemon.json
           sudo service docker restart
 
-      # Build Docker Image using BuildKit
+      # Build Docker Image with Build Arguments
       - name: Build Docker Image
         run: |
           export DOCKER_BUILDKIT=1
           TAG="${IMAGE_NAME}:${VERSION}"
           echo "Building Docker image: $TAG"
-          docker build --progress=plain --build-arg NODE_VERSION=22.9.0 -t $TAG .
+          docker build --progress=plain \
+            --build-arg NEXT_PUBLIC_BACKEND_API_VERSION=v1 \
+            --build-arg NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:9090/api \
+            --build-arg NEXT_PUBLIC_BACKEND_BASE_URL_PRODUCTION=https://api.v1.pixelfreebies.com/api \
+            -t $TAG .
         env:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
 
@@ -45,11 +49,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Push Docker Image to Registry
+      # Push Docker Image to Docker Hub
       - name: Push Docker Image
         run: |
           TAG="${IMAGE_NAME}:${VERSION}"
           echo "Pushing Docker image: $TAG"
           docker push $TAG
-        env:
-          IMAGE_NAME: ${{ env.IMAGE_NAME }}
