--- a/.github/workflows/nextjs-docker-build.yml
+++ b/.github/workflows/nextjs-docker-build.yml
@@ -29,7 +29,7 @@ jobs:
           sudo service docker restart
 
       # Build Docker Image with Build Arguments
-      - name: Build Docker Image
+      - name: Build Docker Image # ${{ secrets.BACKEND_BASE_URL_PRODUCTION }}
         run: |
           export DOCKER_BUILDKIT=1
           TAG="${IMAGE_NAME}:${VERSION}"
@@ -37,7 +37,7 @@ jobs:
           docker build --progress=plain \
             --build-arg NEXT_PUBLIC_BACKEND_API_VERSION=${{ secrets.BACKEND_API_VERSION }} \
             --build-arg NEXT_PUBLIC_BACKEND_BASE_URL=${{ secrets.BACKEND_BASE_URL }} \
-            --build-arg NEXT_PUBLIC_BACKEND_BASE_URL_PRODUCTION=${{ secrets.BACKEND_BASE_URL_PRODUCTION }} \
+            --build-arg NEXT_PUBLIC_BACKEND_BASE_URL_PRODUCTION=https://api.v1.pixelfreebies.com/api \
             -t $TAG .
         env:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
