--- a/backend/pixelfreebies-service/src/main/resources/application.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: PixelFreebies-Service
 
   config:
-    import: application-prod.yml,application-dev.yml
+    import: application-dev.yml,application-dev.yml
 
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
