--- a/backend/pixelfreebies-service/src/main/resources/application.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     import: application-prod.yml,application-dev.yml
 
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:prod}
+    active: ${SPRING_PROFILES_ACTIVE:dev}
 
 base:
   url: /api/v1
