--- a/.github/workflows/springboot-docker-build.yml
+++ b/.github/workflows/springboot-docker-build.yml
@@ -79,5 +79,9 @@ jobs:
         run: |
           VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
           TAG="${IMAGE_NAME}:${VERSION}"
-          echo "Pushing Docker image: $TAG"
+          echo "Pushing Docker image with version tag: $TAG"
           docker push $TAG
+          LATEST_TAG="${IMAGE_NAME}:latest"
+          echo "Pushing Docker image with latest tag: $LATEST_TAG"
+          docker tag $TAG $LATEST_TAG
+          docker push $LATEST_TAG
