--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^15.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "tailwind-scrollbar": "^3.1.0"
   },
