--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -18,7 +20,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "json-server": "^1.0.0-beta.3",
