--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "axios": "^1.7.7",
