--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "axios": "^1.7.7",
