--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.471.1",
     "next": "^15.1.3",
     "react": "^18",
     "react-dom": "^18",
