--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
     "typescript": "^5.7.3"
   },
