--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
