--- a/backend/pixelfreebies-service/src/main/resources/application-dev.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application-dev.yml
@@ -45,6 +45,11 @@ s3:
   accessKey: ${S3_ACCESS_KEY:dummy}
   secretKey: ${S3_SECRET_KEY:dummy}
 
+--- ###Email
+email:
+  service:
+    provider: google
+
 --- ###Custom Variables
 token:
   jwt:
