--- a/backend/pixelfreebies-service/src/main/resources/application-prod.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application-prod.yml
@@ -54,6 +54,11 @@ s3:
   accessKey: ${S3_ACCESS_KEY}
   secretKey: ${S3_SECRET_KEY}
 
+--- ###Email
+email:
+  service:
+    provider: google
+
 --- ###Custom Variables
 token:
   jwt:
