--- a/backend/pixelfreebies-service/src/main/resources/application-dev.yml
+++ b/backend/pixelfreebies-service/src/main/resources/application-dev.yml
@@ -48,8 +48,8 @@ s3:
 --- ###Email
 spring:
   mail:
-    username: ${SMTP_USERNAME:pixelfreebies@gmail.com}
-    password: ${SMTP_PASSWORD}
+    username: ${SPRING_MAIL_USERNAME:pixelfreebies@gmail.com}
+    password: ${SPRING_MAIL_PASSWORD}
     host: ${SPRING_MAIL_HOST:smtp.gmail.com}
     port: ${SPRING_MAIL_PORT:587}
     properties:
